moving demos, creating abstract Mapper class

--- a/MethodDemos/pom.xml
+++ b/MethodDemos/pom.xml
@@ -36,26 +36,17 @@
 			<version>2.5</version>
 		</dependency>
 		<!-- Cermine uses 11.0.1 guava Grobid 19.0 --><!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-		<!-- <dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>19.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>com.google.guava</groupId> <artifactId>guava</artifactId> 
+			<version>19.0</version> </dependency> -->
 		<!-- lucene analyzers 3.6.1, core 3.6.1, analyzers common 4.5.1 with cermine -->
 		<!-- lucene analyzers 4.5.1, core 4.5.1, analyzers common gibts net mit 
 			grobid -->
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-core -->
-		<!-- <dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>4.5.1</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.apache.lucene</groupId> <artifactId>lucene-core</artifactId> 
+			<version>4.5.1</version> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-common -->
-		<!-- <dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers-common</artifactId>
-			<version>4.5.1</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.apache.lucene</groupId> <artifactId>lucene-analyzers-common</artifactId> 
+			<version>4.5.1</version> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -73,6 +64,17 @@
 			<groupId>com.github.CeON</groupId>
 			<artifactId>CERMINE</artifactId>
 			<version>cermine-parent-1.13</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.moxy -->
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.moxy</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.9</version>
 		</dependency>
 	</dependencies>
 	<repositories>
