pom - added dependency for Ratcliff/ObershelpMetric

--- a/MethodDemos/pom.xml
+++ b/MethodDemos/pom.xml
@@ -59,7 +59,8 @@
 			<artifactId>saxon-dom</artifactId>
 			<version>8.7</version>
 		</dependency>
-
+		
+		<!-- uses jitpack.io to use git repo of cermine -->
 		<dependency>
 			<groupId>com.github.CeON</groupId>
 			<artifactId>CERMINE</artifactId>
@@ -82,6 +83,13 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.3</version>
 		</dependency>
+		
+		<!-- for RatcliffObershelpMetric -->
+        <dependency>
+            <groupId>com.rockymadden.stringmetric</groupId>
+            <artifactId>stringmetric-core_2.10</artifactId>
+            <version>0.27.3</version>
+        </dependency>
 
 	</dependencies>
 	<repositories>
