changed moxy and maven-compiler-plugin version, added opencsv

--- a/MethodDemos/pom.xml
+++ b/MethodDemos/pom.xml
@@ -9,11 +9,11 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+			 	<version>3.7.0</version>
+        		<configuration>
+          		<source>1.7</source>
+          	<target>1.7</target>
+        	</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.moxy</artifactId>
-			<version>2.7.0</version>
+			<version>2.7.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
@@ -90,6 +90,14 @@
             <artifactId>stringmetric-core_2.10</artifactId>
             <version>0.27.3</version>
         </dependency>
+        
+        <!-- CSV -->
+		<dependency>
+		    <groupId>com.opencsv</groupId>
+		    <artifactId>opencsv</artifactId>
+		    <version>4.1</version>
+		</dependency>
+        
 
 	</dependencies>
 	<repositories>
