Mapper - change file list logic

--- a/MethodDemos/pom.xml
+++ b/MethodDemos/pom.xml
@@ -104,6 +104,13 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.15</version>
 		</dependency>
+        
+        <dependency>
+		    <groupId>pl.pragmatists</groupId>
+		    <artifactId>JUnitParams</artifactId>
+		    <version>1.1.1</version>
+		    <scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	<repositories>
