--- a/MethodDemos/pom.xml
+++ b/MethodDemos/pom.xml
@@ -10,10 +10,10 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -24,11 +24,8 @@
 		<!-- <dependency> <groupId>pl.edu.icm.cermine</groupId> <artifactId>cermine-impl</artifactId> 
 			<version>1.13</version> </dependency> -->
 
-		<dependency>
-			<groupId>org.grobid</groupId>
-			<artifactId>grobid-core</artifactId>
-			<version>0.5.1</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.grobid</groupId> <artifactId>grobid-core</artifactId> 
+			<version>0.5.1</version> </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<!-- Cermine uses 2.3 commons-io, Grobid 2.5 -->
@@ -64,11 +61,11 @@
 
 		<!-- uses jitpack.io to use git repo of cermine -->
 		<dependency>
-			<groupId>com.github.CeON</groupId>
-			<artifactId>CERMINE</artifactId>
-			<version>cermine-parent-1.13</version>
+			<groupId>pl.edu.icm.cermine</groupId>
+			<artifactId>cermine-impl</artifactId>
+			<version>1.13</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.moxy -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
@@ -78,7 +75,7 @@
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.4.9</version>
+			<version>1.4.10</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
@@ -109,12 +106,31 @@
 			<version>3.17</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/pl.pragmatists/JUnitParams -->
 		<dependency>
 			<groupId>pl.pragmatists</groupId>
 			<artifactId>JUnitParams</artifactId>
 			<version>1.1.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<!-- for ReflectionUtil -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.0.8.RELEASE</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava
+		for class ClassPath -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>26.0-jre</version>
+		</dependency>
+
+
 	</dependencies>
 	<repositories>
 		<repository>
